--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="cabecalho">
             <div class="container">
                 <input type="checkbox" id="menu" class="container__botao">
-                <label for="menu">
+                <label for="menu" class="container__rotulo">
                     <span class="cabecalho__menu-hamburguer container__imagem"></span>
                 </label>
                 <ul class="lista-menu">
@@ -44,7 +44,7 @@
             <ul class="opcoes">
                 <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
                 <label for="opcoes-menu" class="opcoes__label">
-                    <li class="opcoes__item">Categorias</a></li>
+                    <li class="opcoes__item">Categorias</li>
                 </label>
                 <ul class="opcoes__lista">
                     <li>Programação</li>
@@ -53,8 +53,8 @@
                     <li>Business</li>
                     <li>Design UX</li>
                 </ul>
-                <li class="opcoes__item"><a href="#">Favoritos</a></li>
-                <li class="opcoes__item"><a href="#">Minha Estante</a></li>
+                <li class="opcoes__item"><a href="#" >Favoritos</a></li>
+                <li class="opcoes__item"><a href="#" >Minha Estante</a></li>
             </ul>
             <div class="container">
                 <a href="#"><img class="container__imagem--favorito" src="./imgs/Favoritos.svg" alt="Favoritos"></a>
